# 3D_Viewer_v2.0

./: .gitignore  CMakeLists.txt  README.md
dvi/: dvi.md
src/: CMakeCache.txt  Doxyfile  Makefile  report  report-affine_transformations.gcno  report-data_3d_model.gcno  report-lexem.gcno  report-model.gcno  report-parce_obj.gcno  report-set_centre.gcno  report-unit_tests.gcno  test
src/Controller/: controller.cc  controller.h
src/Model/: affine_transformations.cc  affine_transformations.h  data_3d_model.cc  data_3d_model.h  lexem.cc  model.cc  model.h  myopenglwidget.cpp  myopenglwidget.h  parce_obj.cc  parce_obj.h  parse_obj.cc  parse_obj.h  render_3d_model.cc  render_3d_model.h  set_centre.cc  set_centre.h
src/View/: 3D_Viewer_v1_front.pro  glwidget.cc  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myopenglwidget.cpp  myopenglwidget.h  view.cpp  view.h
src/build-3D_Viewer_v1_front-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.qtc_clangd/: compile_commands.json
src/build-3D_Viewer_v1_front-Desktop_x86_darwin_generic_mach_o_64bit-Debug/.qtc_clangd/.cache/clangd/index/: AvailabilityMacros.h.98C048329B6DD1E3.idx  QColor.B159A3797DBD5582.idx  QColorDialog.C41E7ACA66DEA728.idx  QComboBox.A914F97366A4374E.idx  QCoreApplication.753304B112D7C480.idx  QDoubleSpinBox.062858D67EE48A09.idx  QFormLayout.26B04C4DB9E14011.idx  QHBoxLayout.BC72E9FBE8EB3847.idx  QLabel.CEDD8D633093638C.idx  QLayout.6F2B5ED6F790A936.idx  QMessageBox.DDD0F4491A69D388.idx  QObject.4E38B4DD6599C762.idx  QPushButton.2F7ECE946EFA124E.idx  QSlider.E1CCDAAF864A9052.idx  QSpinBox.DDA1FC1E47E9475E.idx  QString.01090FD3C64518BB.idx  QTabWidget.1F8543F12DF54449.idx  QTimer.234B64471E6E5048.idx  QVBoxLayout.972BFE335321F112.idx  QVariant.70269C72ACB06167.idx  TargetConditionals.h.0AC14EA28857AFD9.idx  __assert.DFFC9B2B0B0EA7AC.idx  (+758 more)
src/build-3D_Viewer_v1_front-Unnamed2-Debug/: Makefile  moc_view.cpp  ui_mainwindow.h
src/build-3D_Viewer_v1_front-Unnamed2-Debug/.qtc_clangd/: compile_commands.json
src/build-3D_Viewer_v1_front-Unnamed2-Debug/3D_Viewer_v1_front.app/Contents/: Info.plist
src/build-3D_Viewer_v1_front-Unnamed2-Debug/3D_Viewer_v1_front.app/Contents/MacOS/: 3D_Viewer_v1_front
src/coverage_report/: index-sort-f.html  index-sort-l.html  index.html
src/coverage_report/Controller/: controller.cc.func-c.html  controller.cc.func-sort-c.html  controller.cc.func.html  controller.cc.gcov.html  controller.h.func-c.html  controller.h.func-sort-c.html  controller.h.func.html  controller.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
src/coverage_report/Model/: affine_transformations.cc.func-c.html  affine_transformations.cc.func-sort-c.html  affine_transformations.cc.func.html  affine_transformations.cc.gcov.html  affine_transformations.h.func-c.html  affine_transformations.h.func-sort-c.html  affine_transformations.h.func.html  affine_transformations.h.gcov.html  data_3d_model.cc.func-c.html  data_3d_model.cc.func-sort-c.html  data_3d_model.cc.func.html  data_3d_model.cc.gcov.html  data_3d_model.h.func-c.html  data_3d_model.h.func-sort-c.html  data_3d_model.h.func.html  data_3d_model.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html  lexem.cc.func-c.html  lexem.cc.func.html  lexem.cc.gcov.html  model.cc.func-c.html  model.cc.func-sort-c.html  model.cc.func.html  model.cc.gcov.html  model.h.func-c.html  model.h.func-sort-c.html  model.h.func.html  model.h.gcov.html  parce_obj.cc.func-c.html  parce_obj.cc.func.html  parce_obj.cc.gcov.html  parse_obj.cc.func-c.html  parse_obj.cc.func-sort-c.html  parse_obj.cc.func.html  parse_obj.cc.gcov.html  parse_obj.h.func-c.html  parse_obj.h.func-sort-c.html  parse_obj.h.func.html  (+9 more)
src/coverage_report/tests/: index-sort-f.html  index-sort-l.html  index.html  unit_tests.cc.func-c.html  unit_tests.cc.func-sort-c.html  unit_tests.cc.func.html  unit_tests.cc.gcov.html
src/tests/: unit_tests.cc
(+202 files in other folders)
